# y2download

./: .gitignore  pyproject.toml  requirements.txt
app/: main.py
app/services/: yt_dlp.py
app/templates/: download_options.html  error_invalid_url.html  home.html
app/utils/: data.py  random_name.py  strings.py  temp.py  yt_dlp.py
app/utils/types/: yt_dlp.py  yt_qualities.py
static/: VZq4HTJMH3.f137.mp4.part  XrnR67ZPAf.mkv  YAA7MHKGER.mkv  bBrddR7MFo.mp4.part-Frag12.part  bBrddR7MFo.mp4.part-Frag13.part  bBrddR7MFo.mp4.part-Frag6.part  g3Kdx12vp8.f137.mp4.part  home.css  xyAiooNGcw.mkv
static/styles/: download.css  download_options.css  home.css
