[tool.poetry]
name = "y2download"
version = "0.1.0"
description = ""
authors = ["leandrodevarona <soporte_1@danngos.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
selenium = "^4.24.0"
beautifulsoup4 = "^4.12.3"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
